# wasm-sketches

./: .firebaserc  .gitattributes  .gitignore  index.html  package-lock.json  package.json  png-to-pico.js  tsconfig.json  webpack.config.js
crate/: Cargo.toml
crate/src/: font.rs  lib.rs  pico.rs  sketch.rs
crate/src/sketches/: circle_rect.rs  diagonals.rs  drag.rs  drawing.rs  erase.rs  erase2.rs  lines.rs  mandlebrot.rs  mod.rs  path_drawing.rs  rand_static.rs  rects.rs  text.rs
crate/src/sketches/face/: face.pico  mod.rs
js/: index.js
ts/: app.tsx  directory.tsx  index.tsx  loadDirectory.ts  runSketch.ts  sketch.tsx  utils.ts  wasmContext.ts
