[package]
authors = ["The RustWasm Developers"]
categories = ["wasm"]
description = "My super awesome Rust, WebAssembly, and Webpack project!"
license = "Apache-2.0/MIT"
name = "rust-webpack"
readme = "./README.md"
repository = "https://github.com/rustwasm/rust-webpack-template"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
cfg-if = "0.1.7"
wasm-bindgen = "0.2.43"

ncollide2d = "0.19.1"
nalgebra = "0.18.0"
rand = {version = "0.6.5",features = ["wasm-bindgen"]  }
console_error_panic_hook = { version = "0.1.6", optional = true }

[dependencies.web-sys]
version = "0.3.20"
features = [
    "console"
]


[features]
default = ["console_error_panic_hook"]

[profile.release]
lto = true
